--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@ionic-native/camera": "^5.32.1",
+    "@ionic-native/core": "^5.32.1",
+    "@ionic-native/firebase-x": "^5.32.1",
+    "@ionic-native/splash-screen": "^5.32.1",
+    "@ionic-native/status-bar": "^5.32.1",
+    "angularx-social-login": "^3.5.5",
+    "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
