--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@ionic-native/firebase-x": "^5.32.1",
     "@ionic-native/splash-screen": "^5.32.1",
     "@ionic-native/status-bar": "^5.32.1",
+    "@types/highcharts": "^7.0.0",
     "angularx-social-login": "^3.5.5",
     "bootstrap": "^4.6.0",
+    "highcharts": "^9.0.1",
+    "highcharts-angular": "^2.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
